<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="48sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/sign_up"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_text"
        android:layout_marginTop="12dp"
        android:inputType="text"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="8dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_address"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_below="@id/password"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:text="@string/sign_up"
        android:onClick="onSignUp"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/already_have_an_account_login"
        android:clickable="true"
        android:onClick="onLogin"/>
</RelativeLayout>