<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:background="@color/background">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textSize="48sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/welcome"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/welcome_text"
        android:gravity="center"
        android:textSize="48sp"
        android:textColor="@color/colorPrimary"
        android:text="User"/>

    <Button
        android:id="@+id/create_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="48dp"
        android:background="@android:color/white"
        android:textColor="@color/colorPrimary"
        android:text="@string/create_team"
        android:onClick="onCreateTeam"/>

    <Button
        android:id="@+id/join_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_team"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/background"
        android:text="@string/join_team"
        android:onClick="onJoinTeam"/>
</RelativeLayout>